--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_container"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/user_background"
+    android:orientation="vertical"
     tools:context="com.faragostaresh.cafeyab.AboutActivity">
+
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/action_share"
+        android:src="@drawable/ic_share_black_24dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,169 +32,143 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/page_logo"
+                android:layout_width="192dp"
+                android:layout_height="192dp"
+                android:layout_gravity="center"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:src="@drawable/logo2"
+                app:civ_border_color="@color/iron"
+                app:civ_border_width="1dp" />
+
+            <TextView
+                android:id="@+id/aboutVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:fontFamily="sans-serif-condensed"
+                android:text="V2"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/aboutName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="68dp"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="@string/app_name_persian"
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/aboutEnName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/aboutName"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/aboutText1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/aboutEnName"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:lineSpacingExtra="12sp"
+                android:padding="@dimen/activity_vertical_margin"
+                android:text="@string/about_text_1"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/aboutText2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/aboutText1"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:lineSpacingExtra="12sp"
+                android:padding="@dimen/activity_vertical_margin"
+                android:text="@string/about_text_2"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/aboutVersin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/aboutText2"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:lineSpacingExtra="12sp"
+                android:padding="@dimen/activity_vertical_margin"
+                android:text="@string/about_text_version"
+                android:textSize="14sp" />
+
+            <Space
+                android:id="@+id/spaceHolder"
+                android:layout_width="10dp"
+                android:layout_height="0dp"
+                android:layout_below="@id/aboutVersin"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/aboutCopyRighr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/aboutVersin"
+                android:layout_centerHorizontal="true"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:padding="@dimen/activity_vertical_margin"
+                android:text="@string/about_text_copyright"
+                android:textSize="14sp" />
+
+            <TableLayout
+                android:id="@+id/faragostaresh"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:padding="@dimen/nav_header_vertical_spacing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <RelativeLayout
-                    android:id="@+id/relativeLayout"
+                <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginLeft="240dp"
-                    android:layout_marginRight="24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="120dp"
-                    android:background="@drawable/user_profile_background"
-                    android:elevation="2dp"
-                    android:paddingBottom="24dp">
-
-                    <TextView
-                        android:id="@+id/aboutName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="68dp"
-                        android:fontFamily="sans-serif"
-                        android:gravity="center"
-                        android:text="@string/app_name_persian"
-                        android:textColor="@android:color/black"
-                        android:textSize="24sp" />
-
-                    <TextView
-                        android:id="@+id/aboutEnName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/aboutName"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="8dp"
-                        android:fontFamily="sans-serif-medium"
-                        android:gravity="center"
-                        android:text="@string/app_name"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/aboutText1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/aboutEnName"
-                        android:layout_centerHorizontal="true"
-                        android:gravity="center"
-                        android:lineSpacingExtra="12sp"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:text="@string/about_text_1"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/aboutText2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/aboutText1"
-                        android:layout_centerHorizontal="true"
-                        android:gravity="center"
-                        android:lineSpacingExtra="12sp"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:text="@string/about_text_2"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/aboutVersin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/aboutText2"
-                        android:layout_centerHorizontal="true"
-                        android:gravity="center"
-                        android:lineSpacingExtra="12sp"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:text="@string/about_text_version"
-                        android:textSize="14sp" />
-
-                    <Space
-                        android:id="@+id/spaceHolder"
-                        android:layout_width="10dp"
-                        android:layout_height="0dp"
-                        android:layout_below="@id/aboutVersin"
-                        android:layout_centerHorizontal="true" />
-
-                    <TextView
-                        android:id="@+id/aboutCopyRighr"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/aboutVersin"
-                        android:layout_centerHorizontal="true"
-                        android:ellipsize="end"
-                        android:fontFamily="sans-serif-medium"
-                        android:gravity="center"
-                        android:padding="@dimen/activity_vertical_margin"
-                        android:text="@string/about_text_copyright"
-                        android:textSize="14sp" />
-
-                    <TableLayout
-                        android:id="@+id/faragostaresh"
-                        android:layout_margin="@dimen/activity_vertical_margin"
-                        android:padding="@dimen/nav_header_vertical_spacing"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TableRow
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:layout_gravity="center"
-                            android:layout_margin="@dimen/pad_marg_all"
-                            android:orientation="vertical">
-
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                android:id="@+id/faragostareshLogo"
-                                android:layout_width="64dp"
-                                android:layout_height="64dp"
-                                android:src="@drawable/faragostaresh"
-                                app:civ_border_color="@color/iron"
-                                app:civ_border_width="1dp" />
-
-                            <TextView
-                                android:id="@+id/faragostareshCopyright"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/pad_marg_all"
-                                android:layout_marginRight="@dimen/pad_marg_all"
-                                android:text="@string/faragostareshCopyright"
-                                android:textSize="16dp" />
-
-                        </TableRow>
-                    </TableLayout>
-
-                </RelativeLayout>
-
-                <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/photoHeader"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_anchor="@id/relativeLayout"
-                    app:layout_anchorGravity="top|center">
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/pad_marg_all"
+                    android:orientation="vertical">
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/civProfilePic"
-                        android:layout_width="140dp"
-                        android:layout_height="140dp"
-                        app:civ_border_color="#ffffff"
-                        app:civ_border_width="3dp" />
+                        android:id="@+id/faragostareshLogo"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:src="@drawable/faragostaresh"
+                        app:civ_border_color="@color/iron"
+                        app:civ_border_width="1dp" />
 
                     <TextView
-                        android:id="@+id/aboutVersion"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/faragostareshCopyright"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom|end"
-                        android:fontFamily="sans-serif-condensed"
-                        android:text="V2"
-                        android:textSize="14sp" />
-                </FrameLayout>
-            </android.support.design.widget.CoordinatorLayout>
+                        android:layout_marginLeft="@dimen/pad_marg_all"
+                        android:layout_marginRight="@dimen/pad_marg_all"
+                        android:text="@string/faragostareshCopyright"
+                        android:textSize="16dp" />
+
+                </TableRow>
+            </TableLayout>
+
         </LinearLayout>
     </ScrollView>
-
-</FrameLayout>
+    </FrameLayout>
+</LinearLayout>
