--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -24,6 +24,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="false"
             android:layout_height="match_parent"
             android:background="@color/white">
 
@@ -32,7 +34,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <WebView
+                <!-- <WebView
                     android:id="@+id/playerWebView"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/video_player_height"
@@ -42,7 +44,14 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="0dp"
-                    android:padding="@dimen/activity_vertical_margin" />
+                    android:padding="@dimen/activity_vertical_margin" /> -->
+
+                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                    android:id="@+id/player_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/video_player_height"
+                    android:layout_marginTop="0dp"
+                    android:paddingTop="0dp" />
 
                 <TextView
                     android:id="@+id/viewTitle"
